crates/aura-app/tests/ui/projection_snapshot_policy_private.rs
fn main() {
    let _ = aura_app::workflows::observed_snapshot::observed_chat_snapshot;
    let _ = aura_app::workflows::observed_snapshot::observed_contacts_snapshot;
}
